--- a/index.html
+++ b/index.html
@@ -84,49 +84,34 @@
                             <h3><i class="fas fa-heart"></i> Core Areas</h3>
                             <div class="categories">
                                 <div class="category-card">
-                                    <div class="category-btn" data-category="anatomy">
+                                    <div class="category-info">
                                         <i class="fas fa-user-md"></i>
                                         <span>Anatomy & Physiology</span>
                                     </div>
-                                    <button class="start-btn" data-category="anatomy">
-                                        <i class="fas fa-play"></i>
-                                    </button>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-btn" data-category="biochemistry">
+                                    <div class="category-info">
                                         <i class="fas fa-flask"></i>
                                         <span>Biochemistry</span>
                                     </div>
-                                    <button class="start-btn" data-category="biochemistry">
-                                        <i class="fas fa-play"></i>
-                                    </button>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-btn" data-category="cellbiology">
+                                    <div class="category-info">
                                         <i class="fas fa-cell"></i>
                                         <span>Cell Biology</span>
                                     </div>
-                                    <button class="start-btn" data-category="cellbiology">
-                                        <i class="fas fa-play"></i>
-                                    </button>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-btn" data-category="genetics">
+                                    <div class="category-info">
                                         <i class="fas fa-dna"></i>
                                         <span>Genetics</span>
                                     </div>
-                                    <button class="start-btn" data-category="genetics">
-                                        <i class="fas fa-play"></i>
-                                    </button>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-btn" data-category="microbiology">
+                                    <div class="category-info">
                                         <i class="fas fa-bacteria"></i>
                                         <span>Microbiology</span>
                                     </div>
-                                    <button class="start-btn" data-category="microbiology">
-                                        <i class="fas fa-play"></i>
-                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -136,58 +121,40 @@
                             <h3><i class="fas fa-cogs"></i> Specialized Fields</h3>
                             <div class="categories">
                                 <div class="category-card">
-                                    <div class="category-btn" data-category="pharmacology">
+                                    <div class="category-info">
                                         <i class="fas fa-pills"></i>
                                         <span>Pharmacology</span>
                                     </div>
-                                    <button class="start-btn" data-category="pharmacology">
-                                        <i class="fas fa-play"></i>
-                                    </button>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-btn" data-category="immunology">
+                                    <div class="category-info">
                                         <i class="fas fa-shield-virus"></i>
                                         <span>Immunology</span>
                                     </div>
-                                    <button class="start-btn" data-category="immunology">
-                                        <i class="fas fa-play"></i>
-                                    </button>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-btn" data-category="biomaterials">
+                                    <div class="category-info">
                                         <i class="fas fa-cube"></i>
                                         <span>Biomaterials</span>
                                     </div>
-                                    <button class="start-btn" data-category="biomaterials">
-                                        <i class="fas fa-play"></i>
-                                    </button>
                                 </div>
                                 <div class="category-card">
                                     <div class="category-btn" data-category="tissueengineering">
                                         <i class="fas fa-layer-group"></i>
                                         <span>Tissue Engineering</span>
                                     </div>
-                                    <button class="start-btn" data-category="tissueengineering">
-                                        <i class="fas fa-play"></i>
-                                    </button>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-btn" data-category="biomechanics">
+                                    <div class="category-info">
                                         <i class="fas fa-running"></i>
                                         <span>Biomechanics</span>
                                     </div>
-                                    <button class="start-btn" data-category="biomechanics">
-                                        <i class="fas fa-play"></i>
-                                    </button>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-btn" data-category="bioinformatics">
+                                    <div class="category-info">
                                         <i class="fas fa-laptop-code"></i>
                                         <span>Bioinformatics</span>
                                     </div>
-                                    <button class="start-btn" data-category="bioinformatics">
-                                        <i class="fas fa-play"></i>
-                                    </button>
                                 </div>
                             </div>
                         </div>
