still fixing link issue

--- a/index.html
+++ b/index.html
@@ -84,31 +84,31 @@
                             <h3><i class="fas fa-heart"></i> Core Areas</h3>
                             <div class="categories">
                                 <div class="category-card">
-                                    <div class="category-info">
+                                    <div class="category-btn" data-category="anatomy">
                                         <i class="fas fa-user-md"></i>
                                         <span>Anatomy & Physiology</span>
                                     </div>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-info">
+                                    <div class="category-btn" data-category="biochemistry">
                                         <i class="fas fa-flask"></i>
                                         <span>Biochemistry</span>
                                     </div>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-info">
+                                    <div class="category-btn" data-category="cellbiology">
                                         <i class="fas fa-cell"></i>
                                         <span>Cell Biology</span>
                                     </div>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-info">
+                                    <div class="category-btn" data-category="genetics">
                                         <i class="fas fa-dna"></i>
                                         <span>Genetics</span>
                                     </div>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-info">
+                                    <div class="category-btn" data-category="microbiology">
                                         <i class="fas fa-bacteria"></i>
                                         <span>Microbiology</span>
                                     </div>
@@ -121,19 +121,19 @@
                             <h3><i class="fas fa-cogs"></i> Specialized Fields</h3>
                             <div class="categories">
                                 <div class="category-card">
-                                    <div class="category-info">
+                                    <div class="category-btn" data-category="pharmacology">
                                         <i class="fas fa-pills"></i>
                                         <span>Pharmacology</span>
                                     </div>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-info">
+                                    <div class="category-btn" data-category="immunology">
                                         <i class="fas fa-shield-virus"></i>
                                         <span>Immunology</span>
                                     </div>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-info">
+                                    <div class="category-btn" data-category="biomaterials">
                                         <i class="fas fa-cube"></i>
                                         <span>Biomaterials</span>
                                     </div>
@@ -145,13 +145,13 @@
                                     </div>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-info">
+                                    <div class="category-btn" data-category="biomechanics">
                                         <i class="fas fa-running"></i>
                                         <span>Biomechanics</span>
                                     </div>
                                 </div>
                                 <div class="category-card">
-                                    <div class="category-info">
+                                    <div class="category-btn" data-category="bioinformatics">
                                         <i class="fas fa-laptop-code"></i>
                                         <span>Bioinformatics</span>
                                     </div>
